--- a/index.html
+++ b/index.html
@@ -9,15 +9,11 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="css/icon-font.css" />
+    <!-- <link rel="stylesheet" href="css/icon-font.css" /> -->
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
     <title>Natours | Exciting tours for adventurous people</title>
-    <!-- 
-      TODO: 
-              - Don't forget to run the pre-fixer or else some things will break on chrome
-    -->
   </head>
   <body>
     <!-- NAVIGATION -->
